--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,7 @@ body {
   border: 1px solid #e5e7eb;
   border-radius: 50%;
   background: #fff;
+  color: 333 ;
   cursor: pointer;
   width: 24px;
   height: 24px;
